styles.css
@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');

html {
font-family: 'Lato', sans-serif;
font-size:0.7em;
}

.fullScreen {
    display:flexbox;
    width: clamp(800px, 100vw, 1200px);
    height: clamp(488px, 100vw, 732px);
}

body {
    margin:0px;
}

.leftBlock {
    position: relative;
    width: 45%;
}

.retroImage {
    position: absolute;
    width: 100%;

}

.titleLeft {
    position: absolute;
    width: 100%;
    height: 50px;
    padding-top: 10px;
    margin-top: 45%;
    text-align: center;
    font-size: 3em;
    color:#cf875e;
    background-color: rgba(87, 33, 8, 0.7);
}

.creditLeft {
    position: absolute;
    width: 100%;
    text-align:center;
    margin-top:122%;
    font-size:1.2em;
    color: white;
    background-color: rgba(207, 135, 94, 0.4);
}

.rightBlock {
    position: relative;
    width: 55%;
    left:45%;

}

.paragraph {
    position: absolute;
    font-size:calc(0.5em + 0.5vw);
    margin-top: 8%;
}

fieldset {
    margin-left:10px;
    position: absolute;
    width: 100%;
    display: grid;
    grid-template-columns: 50% 50%;
    margin-top: 37%;
    font-size: calc(1em + 0.5vw);
    background-color:white;
    border-left:none;
    border-right: none;
    border-bottom: 2px inset #956F59;
    border-top: 2px inset #956F59;
}

label {
    display:block;
    margin-left: 10px;
    margin-bottom: 0px;
}

input {
    margin-left: 10px;
    border-top: none;
    border-left: none;
    border-right: none;
    width: 200px;
    margin-bottom: .8em;
}

input:hover {
    border-bottom:5px inset #956F59;
}

button {
    margin-left: 15px;
    background-color: rgb(87, 33, 8);
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    border-radius: 10px;
    margin-top: 2%;
    opacity:0.7;
}

button:hover {
    opacity:1;
}

button:active {
    color:black;
}

.buttons {
    position: absolute;
    margin-top: 77%;
}

.logIn {
    position: absolute;
    margin-top: 85%;
    padding-left: 40px;
    font-size: calc(12px + .1em);
}

footer {
    position: absolute;
    width: 100%;
    margin-top: 102%;
    background-color: rgba(87, 33, 8, 0.7);
    font-size: 1.2em;
    text-align: center;
    padding-bottom: 8px;
    padding-top: 8px;
}

footer img {
    width: 22px;
}

